--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "googleapis": "^154.0.0",
     "lucide-react": "^0.473.0",
     "next": "^15.1.5",
     "next-auth": "^5.0.0-beta.25",
