--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Google Cloud service account credentials
+service-account.json
+
+service-account.json
